--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,13 @@
 <head>
                <meta charset="utf-8">
                <title>Contact</title>
-    <link rel="stylesheet" href=nav.css>
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="OLDstyle.css">
   
 </head>
-    
-<header> 
-    <div class="nav"></div>
+<body>    
+  <header> 
+    <div class="nav">
       <ul> 
          <li><a href="index.html">Home</a></li>
          <li><a href="NewAbout.html">About</a></li>                               
@@ -23,4 +24,6 @@
         <li><a href="reflection.html">Reference Page</a></li>
      </ul> 
     </div>
-</header>
+  </header>
+  </body>
+</html>
