--- a/NewAbout.html
+++ b/NewAbout.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="hero-right">
                     <h2>Kenneth Higgins</h2>
-                    <h1 class="cusAni" data-text="web&nbsp;Science">Life&nbsp; Science</h1>
+                    <h1 class="cusAni" data-text="Life&nbsp;Science">Life&nbsp; Science</h1>
             <p>My journey started back in high school.  I hated science until I had an incredible experience my freshman year.  My teacher was Dr. Pinkham.  He taught through experiences and reflection.  At the end of the class, the teacher asked “How can you apply this to your life?”.</p>  
             <p>I had a new passion, science.  In college, I continued to foster this passion.  I studied Biology, Biochemistry, and education as an undergrad.  I went on to work in a lab only to feel unfulfilled.</p> 
             <p>I changed careers and began working as a science teacher.  In addition, I was a head coach of three sports.  Eventually, I earned my master’s in education leadership and moved into administration.  I continued my education studying educational technologies and informational systems.</p>  
