--- a/NewAbout.html
+++ b/NewAbout.html
@@ -37,5 +37,10 @@
             </div>
         </div>
     </header>
+    <footer>
+        <h1 class="cusAni" data-text="Character&nbsp;Rosevelt">Character. in the long run, &nbsp;is the decisive factor in the life of an individual and of all nations alike. -Thomas Roosevelt</h1>
+    </footer>
 </body>
 </html>
+
+“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –Theodore Roosevelt 
