--- a/NewAbout.html
+++ b/NewAbout.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>About Me</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,800&display=swap" 
-     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
