--- a/NewAbout.html
+++ b/NewAbout.html
@@ -11,7 +11,7 @@
         <div class="wrapper">
             <nav>
                 <div class="logo">
-                    <a href="www.linkedin.com/in/ken-higgins-iii-022336148">Ken<span>neth</span></a>
+                    <a href="http://www.linkedin.com/in/ken-higgins-iii-022336148">Ken<span>neth</span></a>
                 </div>
                 <div class="right-nav">
                     <a href="index.html">Home</a>
