--- a/NewAbout.html
+++ b/NewAbout.html
@@ -41,6 +41,6 @@
     </header>
 </body>
 <footer>
-    <i class="fas fa-phone-square-alt">Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></i>
+    <i class="fas fa-phone-square-alt">314.304.7856</i>
 </footer>
 </html>
