--- a/NewAbout.html
+++ b/NewAbout.html
@@ -39,9 +39,10 @@
             </div>
         </div>
     </header>
-</body>
-<footer>
+    <div id="footer">
     <i class="fas fa-phone-square-alt">314.555.5555</i>
     <br/><i class="fas fa-envelope">Contact me at: <a href="mailto:krh7c5@mail.missouri.edu">krh7c5@mail.missouri.edu</a></i> 
-</footer>
+    </div>
+</body>
+
 </html>
