--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
                <meta name="viewport" content="width=device-width, initial-scale=1">
                 <link rel="stylesheet" href="style.css">
                 <link rel="stylesheet" href="nav.css">
-                <link rel="icon" type="image/x-icon" href="/islt_7310/images/favicon.png" />
-                        <title>Welcome page</title>
+                <link rel="icon" type="image/x-icon" href="/islt_7310/images/favicon.png" /> <title>Welcome page</title>
 </head>
 <body>
     <nav>
