--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="nav">
             <ul> 
                 <li><a href="index.html">Home</a></li>
-                <li><a href="NewAbout.html">About</a></li>                               
+                <li><a href="about.html">About</a></li>                               
                 <li><a href="learn.html">Learn</a>
                     <ul>
                 <li><a href="#link1">Link 1</a></li>
