--- a/about.html
+++ b/about.html
@@ -55,10 +55,11 @@
                 </ul>
             </li>
         </ul>
-        
+        <video>
         <iframe width="420" height="315"
 src="https://youtu.be/HBJSK3K5Dsk">
 </iframe> 
+  </video>
 </main>
 
 <footer>
