--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                 </ul>
             </li>
         </ul>
-        <video>
+        <video class="video">
         <iframe width="420" height="315"
 src="https://youtu.be/HBJSK3K5Dsk">
 </iframe> 
