--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
                 </ul>
             </li>
         </ul>
-        <video class="video">
-        <iframe width="420" height="315"
+        <video class="video" width="500" controls>
+        <iframe width="500" height="315"
 src="https://youtu.be/HBJSK3K5Dsk">
 </iframe> 
   </video>
