--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <nav>
-        <div class="nav">
+        <label for="toggle">&#9776;</label>
+        <input type="checkbox" id="toggle"/>
+        <div class="navu1">
             <ul> 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>                               
