--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <nav>
         <label for="toggle">&#9776;</label>
         <input type="checkbox" id="toggle"/>
-        <div class="navu1">
+        <div class="nav">
             <ul> 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>                               
