--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-               <meta charset="utf-8">
-               <title>Contact</title>
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="OLDstyle.css">
+      <meta charset="utf-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+                 <link rel="stylesheet" href="style.css">
+                 <link rel="stylesheet" href="nav.css">
+                 <link rel="icon" type="image/x-icon" href="favicon.png" /><title>About Me</title>
+
   
 </head>
-<body>    
-  <header> 
-    <div class="nav">
-      <ul> 
-         <li><a href="index.html">Home</a></li>
-         <li><a href="NewAbout.html">About</a></li>                               
-         <li><a href="learn.html">Learn</a>
-            <ul>
+<body>
+    <nav>
+        <label for="toggle">&#9776;</label>
+        <input type="checkbox" id="toggle"/>
+        <div class="nav">
+            <ul> 
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>                               
+                <li><a href="learn.html">Learn</a>
+                    <ul>
                 <li><a href="#link1">Link 1</a></li>
                 <li><a href="#link2">Link 2</a></li>
-                <li><a href="link3">Link 2</a></li>
-            </ul>
-        </li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="reflection.html">Reference Page</a></li>
-     </ul> 
-    </div>
-  </header>
-  </body>
+                <li><a href="#link3">Link 2</a></li>
+                    </ul>
+            </li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="reflection.html">Reference Page</a></li>
+            </ul> 
+        </div>
+    </nav>
+<main>
+  <h2 class="amheading"> Contact Information:</h2> 
+  
+  
+<footer>
+    Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email" width="30px" height="30px"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell" width="30px" height="30px"> 888.888.8888 
+</footer>
+    
+</body>
 </html>
