--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <nav>
+        <label for="toggle">&#9776;</label>
+        <input type="checkbox" id="toggle"/>
         <div class="nav">
             <ul> 
                 <li><a href="index.html">Home</a></li>
