--- a/learn.html
+++ b/learn.html
@@ -59,7 +59,7 @@
         
         
 </main>
-
+<nav></nav>
 <footer>
     Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email" width="30px" height="30px"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell" width="30px" height="30px"> 888.888.8888 
 </footer>
