--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
 <main>
       <p> I will add in some cool images and links</p>
       </main>
+      <nav></nav>
 <footer>
     Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell"> 888.888.8888 
 </footer>
