--- a/learn.html
+++ b/learn.html
@@ -35,7 +35,7 @@
 <main>      
     <h2 id="observation" class="observationheading">Making Observations</h2> 
  <video class="observation" controls> 
-            <video src="Obs crashcourse.mp4">
+            <source src="Obs crashcourse.mp4">
  </video>
  <p class="observationp"> Making observations is a skill that is necessary in this course and will help you when conducting an experiement.  There are two types of observations; qualitative and quantitative.  Both require the use of one or more of the five senses: Touch, Taste, Smell, Hear, and sight.  In the video to the above, I have gone over the differences, examples, and tips for making great observations. </p>
         
