--- a/learn.html
+++ b/learn.html
@@ -37,7 +37,7 @@
  <video class="observation" controls> 
             <source src="Obs crashcourse.mp4">
  </video>
- <p class="observationp"> Making observations is a skill that is necessary in this course and will help you when conducting an experiement.  There are two types of observations; qualitative and quantitative.  Both require the use of one or more of the five senses: Touch, Taste, Smell, Hear, and sight.  In the video to the above, I have gone over the differences, examples, and tips for making great observations. </p>
+ <p class="observationp">Making observations is a skill that is necessary in this course and will help you when conducting an experiement.  There are two types of observations; qualitative and quantitative.  Both require the use of one or more of the five senses: Touch, Taste, Smell, Hear, and Sight.  In the video to the above, I have gone over the differences, examples, and tips for making great observations. </p>
         
  <h2 id="graph" class="graphheading">Graphing<h2>
  
