--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
           
 <form action="mailto:krh7c5@mail.missouri.edu?Subject=Porfolio_Website_Contact" method="post" enctype="text/plain">
                 <label for="firstname">First Name</label>
-                <input type="text" name="firstname"  id="firstname" autofocus tabindex="1" placeholder="Jean" required>
+                <input type="text" name="firstname"  id="firstname" autofocus tabindex="1" placeholder="John" required>
             <br> 
                 <label for="lastname">Last Name</label>
                 <input type="text" name="lastname" id="lastname" tabindex="2" placeholder="Doe" required>
