--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <footer>
     Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell"> 888.888.8888 <a href='https://free-hit-counters.net/'>Free-Hit-Counters.net</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c8144141606f5e37e1de3191e6e24d77b0bd1b20'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/826179/t/2">
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/826179/t/2"></script>
 </footer>
     
 </body>
