--- a/learn.html
+++ b/learn.html
@@ -34,7 +34,7 @@
 </header>
 <main>      
     <h2 id="observation" class="observationheading">Making Observations</h2> 
- <video class="observation" controls> 
+ <video class="observationvid" controls> 
             <source src="Obs crashcourse.mp4">
  </video>
  <p class="observationp">Making observations is a skill that is necessary in this course and will help you when conducting an experiement.  There are two types of observations; qualitative and quantitative.  Both require the use of one or more of the five senses: Touch, Taste, Smell, Hear, and Sight.  In the video to the above, I have gone over the differences, examples, and tips for making great observations. </p>
