--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </header>
 
 <main>
-<h2 class=aboutsite> This website is an extension to our class and is a resource to help support your learning by:
+<h2 class=aboutsite> This website is an extension to our class and is a resource to help support your learning by:</h2>
     <ul style="list-style-type:disc">
         <li>Using objective-specific information</li>
         <li>Applying concepts to real- life situations</li>
@@ -81,8 +81,7 @@
         </main>
   
 <blockquote>“Character, in the long run, is the decisive factor in the life of an individual and of nations alike.” –<em>Theodore Roosevelt</em> </blockquote>
-    
-</main>
+   
 
 <footer>
     Created by Kenneth R. Higgins III. Contact: <img class="icon" src="email.png" alt="Email"> krh7c5@mail.missouri.edu <img class="icon" src="cell.jpg" alt="cell"> 888.888.8888 <a href='https://free-hit-counters.net/'>Free-Hit-Counters.net</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c8144141606f5e37e1de3191e6e24d77b0bd1b20'></script>
